// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`P: Component should render children when passed in 1`] = `
<p
  style={
    Object {
      "fontFamily": "Inter-BETA, Arial, Helvetica, sans-serif",
      "fontSize": "18px",
      "lineHeight": "1.33em",
    }
  }
>
  Short paragraph
</p>
`;

exports[`P: Component should render correctly 1`] = `
<p
  style={
    Object {
      "fontFamily": "Inter-BETA, Arial, Helvetica, sans-serif",
      "fontSize": "18px",
      "lineHeight": "1.33em",
    }
  }
/>
`;

exports[`P: Component should render with custom styles 1`] = `
<p
  style={
    Object {
      "color": "blue",
      "fontFamily": "Inter-BETA, Arial, Helvetica, sans-serif",
      "fontSize": "18px",
      "lineHeight": "1.33em",
    }
  }
>
  Paragraph with custom styles
</p>
`;
